Assignment_2 second addition

--- a/index.html
+++ b/index.html
@@ -92,18 +92,38 @@
         </div>
         <div class="mainsection3">
             <div>
-                
+                <h1 class="m3h1">Why Choose Us</h1>
+                <p class="m3p">
+                    Choose us for your travel needs, where personalized experiences meet seamless planning. Let us turn your journey into a curated adventure, crafted just for you.
+                </p>
 
             </div>
-            <div>
-                <section>
+            <div class="m3d2">
+                <section class="m3s1">
+                    <img src="hotel 1.png" alt="" id="hotel1">
+                    <h3 id="m3h3">Handpicked Hotels</h3>
+                    <p id="m3p2">
+                        Nestled in the heart of Rivertown, our hotel is a haven of comfort and style. With modern amenities, personalized service, and a central location, we invite you to experience a delightful stay that complements the charm of our picturesque destination.
+                    </p>
 
                 </section>
-                <section>
+                <section class="m3s2">
+                    <img src="map 1.png" alt="" id="map1">
+                    <h3 id="m3s2h3">World Class Service</h3>
+                    <p id="m3s2p2">
+                        Discover a new level of travel with us – where personalized itineraries, seamless logistics, and exceptional support redefine your journey. Your dream vacation starts here.
+                    </p>
+                    
 
                 </section>
             </div>
-            <div>
+            <div class="m3d3">
+                <img src="price-tag 1.png" alt="">
+                <h3 class="m3d3h3">Best Price Guarantee</h3>
+                <p class="m3p3">
+                    Our commitment: the best price guaranteed. Book with confidence, knowing you'll always secure the most competitive rates for your dream getaway.
+                </p>
+
 
             </div>
 
