--- a/index.html
+++ b/index.html
@@ -128,6 +128,28 @@
             </div>
 
         </div>
+        <div class="lastmainsection">
+            <section class="lastmainsection1">
+                <h3 class="lmsh3">Newsletter</h3>
+                <p class="lmsp">Get your daily dose of travel news & tips. Sign up today!</p>
+                <hr id="hr">
+                <input class="lmsi1" type="text"><br>
+                <input class="lms2" type="text"><br>
+                <button class="lmsbutton">Subscribe</button>
+
+            </section>
+            <div class="lastmainsection2">
+                <!-- <img class="limg" src="Rectangle 8 (1).png" alt=""> -->
+                <section class="box">
+                    <p id="boxs">
+                        Travel.com <br>
+                    <span id="boxh3">Save up to 70%</span>
+                </p>
+
+                </section>
+            </div>
+
+        </div>
 
     </main>
     <footer>
