--- a/index.html
+++ b/index.html
@@ -133,18 +133,19 @@
                 <h3 class="lmsh3">Newsletter</h3>
                 <p class="lmsp">Get your daily dose of travel news & tips. Sign up today!</p>
                 <hr id="hr">
-                <input class="lmsi1" type="text"><br>
-                <input class="lms2" type="text"><br>
+                <input class="lmsi1" type="text" placeholder="Enter your name"><br>
+                <input class="lmsi2" type="email" placeholder="Enter your email"><br>
                 <button class="lmsbutton">Subscribe</button>
 
             </section>
             <div class="lastmainsection2">
-                <!-- <img class="limg" src="Rectangle 8 (1).png" alt=""> -->
                 <section class="box">
                     <p id="boxs">
                         Travel.com <br>
-                    <span id="boxh3">Save up to 70%</span>
-                </p>
+                        <span id="boxh3">
+                            Save up to 70%
+                        </span>
+                    </p>
 
                 </section>
             </div>
@@ -153,6 +154,23 @@
 
     </main>
     <footer>
+        <div class=" footer-name-logo">
+            <img src="Group 40071 (2).png" id="footerlogo">
+            <p id="footername1">Explore<span id="footername2">Epic</span></p>
+
+        </div>
+        <p class="footerp">
+            Embark on endless adventures with us. Explore, dream, and discover your next destination.
+        </p>
+        <div class="logocontainer">
+            <img src="Social.png" id="sociallogo">
+
+        </div>
+        <hr id="lhr">
+        <div class="copy">
+            &copy;<small id="copy">2017, All Rights Reserved. </small>
+        </div>
+
 
     </footer>
     
