Assignment_2 polishing addition

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <option>Economy class</option>
                     <option>Business class</option>
                 </select>
-                <button class="btn">Find Now</button>
+                <button class="btn"><img src="Frame.png" alt="" id="btnimg">Find Now</button>
             </section>
 
         </div>
@@ -118,9 +118,9 @@
                 </section>
             </div>
             <div class="m3d3">
-                <img src="price-tag 1.png" alt="">
-                <h3 class="m3d3h3">Best Price Guarantee</h3>
-                <p class="m3p3">
+                <img src="price-tag 1.png" alt="" id="price">
+                <h3 id="m3d3h3">Best Price Guarantee</h3>
+                <p id="m3p3">
                     Our commitment: the best price guaranteed. Book with confidence, knowing you'll always secure the most competitive rates for your dream getaway.
                 </p>
 
