Assignment-2 Responsive Addition

--- a/index.html
+++ b/index.html
@@ -154,21 +154,23 @@
 
     </main>
     <footer>
-        <div class=" footer-name-logo">
-            <img src="Group 40071 (2).png" id="footerlogo">
-            <p id="footername1">Explore<span id="footername2">Epic</span></p>
+        <div class="fft">
+            <div class=" footer-name-logo">
+                <img src="Group 40071 (2).png" id="footerlogo">
+                <p id="footername1">Explore<span id="footername2">Epic</span></p>
 
-        </div>
-        <p class="footerp">
-            Embark on endless adventures with us. Explore, dream, and discover your next destination.
-        </p>
-        <div class="logocontainer">
-            <img src="Social.png" id="sociallogo">
+            </div>
+            <p class="footerp">
+                Embark on endless adventures with us. Explore, dream, and discover your next destination.
+            </p>
+            <div class="logocontainer">
+                <img src="Social.png" id="sociallogo">
 
-        </div>
-        <hr id="lhr">
-        <div class="copy">
-            &copy;<small id="copy">2017, All Rights Reserved. </small>
+            </div>
+            <hr id="lhr">
+            <div class="copy">
+               <span id="lspanresponsive"> &copy;<small id="copy">2017, All Rights Reserved. </small></span>
+            </div>
         </div>
 
 
